// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Wrapper correctly 1`] = `
<div
  className="container mx-auto px-4 sm:px-6 lg:px-8 "
>
  Content goes here.
</div>
`;

exports[`renders Wrapper correctly when passing className 1`] = `
<div
  className="container mx-auto px-4 sm:px-6 lg:px-8 bg-gray-200"
>
  Content goes here.
</div>
`;
